--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Discoverfy">
-        <activity android:name=".ActionActivity"></activity>
+        <activity android:name=".RecommendListItem"></activity>
+        <activity android:name=".RecentlyPlayedListItem" />
+        <activity android:name=".ActionActivity" />
         <activity android:name=".RecommendActivity" />
         <activity android:name=".RecentlyPlayedActivity" />
         <activity android:name=".LoginActivity">
