--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Discoverfy">
-        <activity android:name=".RecommendListItem" />
 
-        <activity android:name=".RecentlyPlayedListItem" />
-
-        <activity android:name=".ActionActivity"></activity>
-
-        <activity android:name=".RecommendActivity">
+        <activity android:name=".ActionActivity"
+            android:parentActivityName=".RecommendActivity">
         </activity>
 
-        <activity android:name=".RecentlyPlayedActivity" />
+        <activity android:name=".RecommendActivity"
+            android:parentActivityName=".RecentlyPlayedActivity">
+        </activity>
+
+        <activity android:name=".RecentlyPlayedActivity"
+            android:parentActivityName=".LoginActivity">
+        </activity>
 
         <activity android:name=".LoginActivity">
             <intent-filter>
