--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,19 +29,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Discoverfy">
-
-        <activity android:name=".ActionActivity"
-            android:parentActivityName=".RecommendActivity">
-        </activity>
-
-        <activity android:name=".RecommendActivity"
-            android:parentActivityName=".RecentlyPlayedActivity">
-        </activity>
-
-        <activity android:name=".RecentlyPlayedActivity"
-            android:parentActivityName=".LoginActivity">
-        </activity>
-
+        <activity android:name=".TestActivity"></activity>
+        <activity android:name=".ResultsActivity" />
+        <activity android:name=".SettingsActivity" />
+        <activity
+            android:name=".ActionActivity"
+            android:parentActivityName=".RecommendActivity" />
+        <activity
+            android:name=".RecommendActivity"
+            android:parentActivityName=".RecentlyPlayedActivity" />
+        <activity
+            android:name=".RecentlyPlayedActivity"
+            android:parentActivityName=".LoginActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
