--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,6 @@
         <intent>
             <action android:name="android.intent.action.VIEW" />
 
-            <data android:scheme="geo" />
-        </intent>
-        <intent>
-            <action android:name="android.intent.action.VIEW" />
-
             <data android:scheme="https" />
         </intent>
         <intent>
@@ -29,7 +24,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Discoverfy">
-        <activity android:name=".SettingsActivity" />
+        <activity
+            android:name=".SettingsActivity"
+        android:parentActivityName=".LoginActivity" />
         <activity
             android:name=".ActionActivity"
             android:parentActivityName=".RecommendActivity" />
