--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Discoverfy">
         <activity
-            android:name=".SettingsActivity"
-        android:parentActivityName=".LoginActivity" />
+            android:name=".MainActivity"
+            android:parentActivityName=".LoginActivity" />
+        <activity
+            android:name=".TopTracksActivity"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".ActionActivity"
             android:parentActivityName=".RecommendActivity" />
@@ -35,7 +38,7 @@
             android:parentActivityName=".RecentlyPlayedActivity" />
         <activity
             android:name=".RecentlyPlayedActivity"
-            android:parentActivityName=".LoginActivity" />
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
